# Ashfall

./: .gitignore  Cargo.toml  README.md
crates/ashfall-bridge/: Cargo.toml
crates/ashfall-bridge/src/: commands.rs  console.rs  events.rs  lib.rs  network.rs  plugin.rs
crates/ashfall-bridge/src/hooks/: detour.rs  memory.rs  mod.rs  opcode.rs  vtable.rs
crates/ashfall-bridge/tests/: command_dispatch.rs  events.rs  pipe_protocol.rs  plugin_info.rs
crates/ashfall-client/: Cargo.toml
crates/ashfall-client/src/: config.rs  dispatch.rs  game.rs  main.rs  network.rs
crates/ashfall-client/src/handlers/: chat.rs
crates/ashfall-client/src/ipc/: commands.rs  mod.rs  transport.rs
crates/ashfall-client/src/ui/: app.rs  chat.rs  mod.rs  server_browser.rs  widgets.rs
crates/ashfall-client/src/world/: cell.rs  mod.rs  registry.rs  state.rs
crates/ashfall-core/: Cargo.toml
crates/ashfall-core/src/: constants.rs  form_id.rs  id.rs  lib.rs  math.rs  types.rs
crates/ashfall-core/src/protocol/: channel.rs  header.rs  mod.rs
crates/ashfall-core/tests/: wire_format.rs
crates/ashfall-master/: Cargo.toml
crates/ashfall-master/src/: main.rs  server_list.rs
crates/ashfall-master/tests/: master_integration.rs
crates/ashfall-script/: Cargo.toml
crates/ashfall-script/src/: lib.rs
crates/ashfall-server/: Cargo.toml
crates/ashfall-server/src/: anti_cheat.rs  config.rs  dedicated.rs  dispatch.rs  lib.rs  main.rs  master.rs  network.rs  session.rs
crates/ashfall-server/src/ai/: factions.rs  mod.rs  packages.rs
crates/ashfall-server/src/combat/: mod.rs  resolver.rs
crates/ashfall-server/src/db/: container.rs  exterior.rs  faction.rs  global.rs  item.rs  mod.rs  npc.rs  quest.rs  race.rs  record.rs  reference.rs  schema.rs  terminal.rs  tests.rs  weapon.rs
crates/ashfall-server/src/handlers/: actor.rs  auth.rs  chat.rs  combat.rs  game.rs  gui.rs  item.rs  mod.rs  object.rs  physics.rs  player.rs  quest.rs
crates/ashfall-server/src/physics/: mod.rs
crates/ashfall-server/src/quest/: mod.rs
crates/ashfall-server/src/script/: callbacks.rs  engine.rs  host.rs  mod.rs  timer.rs
crates/ashfall-server/src/world/: cell.rs  globals.rs  inventory.rs  mod.rs  objects.rs  registry.rs  weather.rs
crates/ashfall-server/tests/: anti_cheat.rs  combat_tests.rs  scripting.rs  stress.rs  world_sync.rs
docs/: architecture.md  codebase-analysis.md  external-ingestion-plan.md  impl-plan.md  phase10-reuse-plan.md  proton-setup.md  requirements.md  research-brief.md
scripts/freeroam/: Cargo.toml
scripts/freeroam/src/: lib.rs
