[package]
name = "ashfall-client"
version = "0.1.0"
edition = "2021"

[dependencies]
ashfall-core = { path = "../ashfall-core" }
tokio = { workspace = true }
serde = { workspace = true }
postcard = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
egui = { workspace = true }
eframe = { workspace = true }
parking_lot = { workspace = true }
