[package]
name = "ashfall-server"
version = "0.1.0"
edition = "2021"

[dependencies]
ashfall-core = { path = "../ashfall-core" }
tokio = { workspace = true }
serde = { workspace = true }
postcard = { workspace = true }
rusqlite = { workspace = true }
wasmtime = { workspace = true }
dashmap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
parking_lot = { workspace = true }
clap = { version = "4", features = ["derive"] }
shellexpand = "3"
toml = "0.8"
